--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "csv-writer": "^1.6.0",
     "form-data": "^4.0.0",
     "got": "13.0.0",
+    "jsforce": "2.0.0-beta.29",
     "p-queue": "^8.0.1"
   },
   "devDependencies": {
