fix: incorrect tagging logic

--- a/.github/workflows/onRelease.yml
+++ b/.github/workflows/onRelease.yml
@@ -25,5 +25,6 @@ jobs:
     uses: SimplySF/github-workflows/.github/workflows/npmPublish.yml@main
     needs: [getDistTag]
     with:
+      tag: ${{ needs.getDistTag.outputs.tag || 'latest' }}
       githubTag: ${{ github.event.release.tag_name || inputs.tag }}
     secrets: inherit
