--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "@ClayChipps",
   "bugs": "https://github.com/SimplySF/simply-data/issues",
   "dependencies": {
+    "@jsforce/jsforce-node": "^3.2.0",
     "@oclif/core": "^3.26.4",
     "@salesforce/core": "^7.3.3",
     "@salesforce/kit": "^3.1.1",
@@ -13,6 +14,7 @@
     "csv-writer": "^1.6.0",
     "form-data": "^4.0.0",
     "got": "13.0.0",
+    "nock": "^13.5.4",
     "p-queue": "^8.0.1"
   },
   "devDependencies": {
