--- a/package.json
+++ b/package.json
@@ -5,27 +5,27 @@
   "author": "@ClayChipps",
   "bugs": "https://github.com/SimplySF/simply-data/issues",
   "dependencies": {
-    "@oclif/core": "^4",
-    "@salesforce/core": "^8.0.1",
-    "@salesforce/kit": "^3.1.6",
-    "@salesforce/sf-plugins-core": "^11.1.1",
+    "@oclif/core": "^4.0.31",
+    "@salesforce/core": "^8.6.4",
+    "@salesforce/kit": "^3.2.3",
+    "@salesforce/sf-plugins-core": "^12.0.11",
     "csv-parse": "^5.5.6",
     "csv-writer": "^1.6.0",
-    "form-data": "^4.0.0",
+    "form-data": "^4.0.1",
     "got": "13.0.0",
     "p-queue": "^8.0.1"
   },
   "devDependencies": {
-    "@oclif/plugin-command-snapshot": "^5.2.3",
-    "@salesforce/cli-plugins-testkit": "^5.3.15",
-    "@salesforce/plugin-command-reference": "^3.1.5",
-    "@salesforce/ts-sinon": "1.4.22",
-    "@simplysf/dev-scripts": "^3.3.0",
-    "eslint-plugin-sf-plugin": "^1.18.9",
-    "nock": "^13.5.4",
-    "oclif": "^4.13.8",
+    "@oclif/plugin-command-snapshot": "^5.2.21",
+    "@salesforce/cli-plugins-testkit": "^5.3.20",
+    "@salesforce/plugin-command-reference": "^3.1.32",
+    "@salesforce/ts-sinon": "^1.4.29",
+    "@simplysf/dev-scripts": "^3.3.1",
+    "eslint-plugin-sf-plugin": "^1.20.11",
+    "nock": "^13.5.5",
+    "oclif": "^4.15.19",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.6.3"
   },
   "engines": {
     "node": ">=18.0.0"
